--- a/layouts/classes/list.html
+++ b/layouts/classes/list.html
@@ -10,6 +10,11 @@
 		
 		{{ .Content }}
 		
+			<div class = "exit-button clearfix">
+        <a href="https://docs.google.com/spreadsheets/d/1IJ7gqdHNbajf1WQczDe771S0VNavEzIR1pY-EBcnXgU/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="w3-button w3-green float-right">Progress Tracker</a>
+        <a href="https://docs.google.com/spreadsheets/d/1eA0UPbpOGPXK0YduTeswtcQbG7IvB-iICamr0pGc3vU/edit?usp=sharing" target="_blank" rel="noopener noreferrer" class="w3-button w3-blue">Student Goals</a>
+      </div>
+		
 
     <div class="w3-bar w3-light-gray">
       {{ range sort .Sections ".Params.weight"}}
