add exit ticket

--- a/layouts/classes/single.html
+++ b/layouts/classes/single.html
@@ -59,6 +59,11 @@
 			</div>
 			{{ end }}
 			
+			{{ if gt .Params.level 1}}
+			<div class = "exit-button">
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSc_DkB8lKH1kC-Pb2lVmyL0r5S2sdRLYJSy-bzRcvPiI504sA/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" class="w3-button w3-green">Exit Ticket</a>
+      </div>
+      {{ end }}
       
       {{ if .Params.level }}  
       
